# Transliterate

./: .gitignore  README.md  example.py  pyproject.toml
tests/: __init__.py
tests/thai/: __init__.py  test_core.py
transliterate/phonemizer/: __init__.py  base_phonemizer.py  english_phonemizer.py  thai_phonemizer.py  utils.py
transliterate/thai/: core.py  exceptions.py  tokenizer.py
transliterate/tokenizer/: __init__.py  base_tokenizer.py  english_tokenizer.py  thai_tokenizer.py
transliterate/utils/: phoneme_converter.py  punctuations.py  vowels.py
