[tool.poetry]
name = "transliterate"
version = "0.1.0"
description = "A Python library to convert text to phoneme representations."
authors = ["Thanat Wongsamut <thanat.wongsamut@gmail.com>", "Korawut Sirianuntapat <korawut_s@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
tltk = "^1.9.1"
pythainlp = "^5.0.4"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
