[tool.poetry]
name = "transliterate"
version = "0.1.0"
description = "A Python library to convert text to phoneme representations."
authors = ["Thanat Wongsamut <thanat.wongsamut@gmail.com>", "Korawut Sirianuntapat <korawut_s@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dubbing-ai/Transliterate"
repository = "https://github.com/dubbing-ai/Transliterate"
documentation = "https://github.com/dubbing-ai/Transliterate#readme"
keywords = ["nlp", "phonemes", "thai", "english", "text-processing"]
packages = [
    { include = "transliterate" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
tltk = "^1.9.1"
pythainlp = "^5.0.4"
phonemizer = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
